# CRC-manipulator

./: .gitignore  CHANGES.md  README.md  bootstrap  cross_mingw_i686.txt  cross_mingw_x86_64.txt  distro.sh  meson.build  meson_options.txt  mit-license  wscript
cli/: crcmanip.cbp  crcmanip.cpp  crcmanip.depend  crcmanip.layout  debug.cpp  debug.h  main.cc  meson.build  version.h
cli/CRC/: CRC.cpp  CRC.h  CRC16CCITT.cpp  CRC16CCITT.h  CRC16IBM.cpp  CRC16IBM.h  CRC32.cpp  CRC32.h
cli/File/: File.cpp  File.h  FileBufferedAdapter.cpp  FileBufferedAdapter.h  FileDirectAdapter.cpp  FileDirectAdapter.h  FileFactory.cpp  FileFactory.h  IFile.cpp  IFile.h
cli/test/: input-big.txt  input.txt
gui/: App.xaml  App.xaml.cs  ControlAnimationExtensionMethods.cs  Window1.xaml  Window1.xaml.cs  crcmanip-gui.csproj  crcmanip-gui.sln  drop_line_edit.cc  drop_line_edit.h  droplineedit.cc  droplineedit.h  main.cc  main_window.cc  main_window.h  main_window.ui  mainwindow.cc  mainwindow.h  mainwindow.ui  meson.build
gui/Properties/: AssemblyInfo.cs  WPFAssemblyInfo.cs
lib/: CRC.cc  CRC.h  CRCFactories.cc  CRCFactories.h  File.cc  File.h  Progress.cc  Progress.h  crc.cc  crc.h  crc_factories.cc  crc_factories.h  debug.cc  debug.h  file.cc  meson.build  progress.cc  tablerev.py  util.cc  util.h  version.h
lib/CRC/: CRC.cc  CRC.h  CRC16CCITT.cc  CRC16CCITT.h  CRC16IBM.cc  CRC16IBM.h  CRC32.cc  CRC32.cpp  CRC32.h
lib/File/: File.cc  File.h
tests/: main.cc  meson.build  test_crc.cc  test_crc.h  test_crc16ccitt.cc  test_crc16ibm.cc  test_crc32.cc  test_crc_support.cc  test_crc_support.h  test_file.cc  test_position.cc
